# Paxos

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  mainClient.c  mainServer.c  network.c  network.h
src/helpers/: timer.c  timer.h
src/messages/: message.c  message.h
src/network/: message.h  network.c  network.h  queue.c  queue.h
src/networkSimulation/: network.c  network.h
src/paxos/: client.c  client.h  node.h  server.c  server.h
src/paxosSimulation/: client.c  client.h  node.h  server.c  server.h
tests/: CMakeLists.txt  test_network.c
tests/messages/: test_message.c  test_queue.c
tests/network/: test_network.c  test_queue.c
